--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -1,21 +1,32 @@
 name: End-to-end tests
-on: push
+
+on:
+  push:
+
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
-      - uses: actions/upload-artifact@v4
+
+      # Upload do screenshot em caso de falha
+      - name: Upload Cypress screenshots
         if: failure()
+        uses: actions/upload-artifact@v4
         with:
           name: cypress-screenshots
           path: cypress/screenshots
           if-no-files-found: ignore
-      - uses: actions/upload-artifact@v4
+
+      # Upload do vídeo em caso de falha
+      - name: Upload Cypress videos
+        if: failure()
+        uses: actions/upload-artifact@v4
         with:
           name: cypress-videos
           path: cypress/videos
